feat: Add Remember Me support, fix session persistence and course pagination